crates/solite-fmt/src/snapshots/solite_fmt__tests__release_savepoint.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- release savepoint sp1

-- Output:
release savepoint sp1;
