crates/solite-fmt/src/snapshots/solite_fmt__tests__replace_into.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- replace into t (a, b) values (1, 2)

-- Output:
replace into t(a, b)
values
  (1, 2);
