crates/solite-fmt/src/snapshots/solite_fmt__tests__rollback.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- rollback

-- Output:
rollback;
