crates/solite-fmt/src/snapshots/solite_fmt__tests__rollback_to_savepoint.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- rollback to savepoint sp1

-- Output:
rollback to savepoint sp1;
