crates/solite-fmt/src/snapshots/solite_fmt__tests__savepoint.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- savepoint sp1

-- Output:
savepoint sp1;
