crates/solite-fmt/src/snapshots/solite_fmt__tests__select_cross_join.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select a, b from t cross join u

-- Output:
select
  a,
  b
from t
cross join u;
