crates/solite-fmt/src/snapshots/solite_fmt__tests__select_distinct.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select distinct a, b from t

-- Output:
select distinct
  a,
  b
from t;
