crates/solite-fmt/src/snapshots/solite_fmt__tests__select_except.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select a from t except select b from u

-- Output:
select a
from t
except
select
  b
from u;
