crates/solite-fmt/src/snapshots/solite_fmt__tests__select_from_table_function.snap
---
source: crates/solite-fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select value from generate_series(1, 10, 2)

-- Output:
select value from generate_series(1, 10, 2);
