crates/solite-fmt/src/snapshots/solite_fmt__tests__select_inner_join.snap
---
source: crates/solite_fmt/src/tests.rs
expression: "snapshot(sql, &config)"
snapshot_kind: text
---
-- Input:
-- select a, b from t inner join u on t.id = u.id

-- Output:
select
  a,
  b
from t
inner join u
  on t.id = u.id;
